--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-easy-data-table": "^1.5.47",
+    "vue3-easy-table": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
